--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #eee;">
   <div id="base" class="container d-flex justify-content-center">
 
     <div class="row">
