--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark" class="carousel carousel-dark slide border border-secondary rounded-3 "
+        <div id="carouselExampleDark" class="carousel carousel-dark slide  rounded-3 "
           data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -97,7 +97,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark2" class="carousel carousel-dark slide border border-secondary rounded-3 "
+        <div id="carouselExampleDark2" class="carousel carousel-dark slide  rounded-3 "
           data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark2" data-bs-slide-to="0" class="active"
@@ -184,7 +184,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark3" class="carousel carousel-dark slide border border-secondary rounded-3 "
+        <div id="carouselExampleDark3" class="carousel carousel-dark slide  rounded-3 "
           data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark3" data-bs-slide-to="0" class="active"
@@ -314,7 +314,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark4" class="carousel carousel-dark slide border border-secondary rounded-3 "
+        <div id="carouselExampleDark4" class="carousel carousel-dark slide  rounded-3 "
           data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark4" data-bs-slide-to="0" class="active"
@@ -391,7 +391,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark5" class="carousel carousel-dark slide border border-secondary rounded-3 "
+        <div id="carouselExampleDark5" class="carousel carousel-dark slide  rounded-3 "
           data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="0" class="active"
@@ -504,7 +504,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark6" class="carousel carousel-dark slide border border-secondary rounded-3 "
+        <div id="carouselExampleDark6" class="carousel carousel-dark slide  rounded-3 "
           data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark6" data-bs-slide-to="0" class="active"
@@ -597,7 +597,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark7" class="carousel carousel-dark slide border border-secondary rounded-3 "
+        <div id="carouselExampleDark7" class="carousel carousel-dark slide  rounded-3 "
           data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark7" data-bs-slide-to="0" class="active"
