--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body style="background-color: #eee;">
+ 
   <div id="base" class="container d-flex justify-content-center">
 
-    <div class="row">
+    <div class="container row">
 
       <div class="col-md-12 py-3">
         <div id="carouselExampleDark" class="carousel carousel-dark slide  rounded-3 "
@@ -664,6 +665,73 @@
         </div>
       </div>
 
+      <div class="col-md-12 py-3">
+        <div id="carouselExampleDark8" class="carousel carousel-dark slide  rounded-3 "
+          data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="3"
+              aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="4"
+              aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="5"
+              aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="6"
+              aria-label="Slide 7"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="7"
+              aria-label="Slide 8"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="8"
+              aria-label="Slide 9"></button>
+          </div>
+
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/Acc/Screenshot1.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot2.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot3.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot4.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot5.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot6.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot7.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot8.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot9.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark8"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark8"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+
+        </div>
+      </div>
 
     </div>
 
