--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 </head>
 
 <body style="background-color: #eee;">
- 
+
   <div id="base" class="container d-flex justify-content-center">
 
     <div class="container row">
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark" class="carousel carousel-dark slide  rounded-3 "
-          data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide  rounded-3 " data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -98,8 +97,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark2" class="carousel carousel-dark slide  rounded-3 "
-          data-bs-ride="carousel">
+        <div id="carouselExampleDark2" class="carousel carousel-dark slide  rounded-3 " data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark2" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -185,8 +183,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark3" class="carousel carousel-dark slide  rounded-3 "
-          data-bs-ride="carousel">
+        <div id="carouselExampleDark3" class="carousel carousel-dark slide  rounded-3 " data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark3" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -315,8 +312,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark4" class="carousel carousel-dark slide  rounded-3 "
-          data-bs-ride="carousel">
+        <div id="carouselExampleDark4" class="carousel carousel-dark slide  rounded-3 " data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark4" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -392,8 +388,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark5" class="carousel carousel-dark slide  rounded-3 "
-          data-bs-ride="carousel">
+        <div id="carouselExampleDark5" class="carousel carousel-dark slide  rounded-3 " data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark5" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -505,8 +500,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark6" class="carousel carousel-dark slide  rounded-3 "
-          data-bs-ride="carousel">
+        <div id="carouselExampleDark6" class="carousel carousel-dark slide  rounded-3 " data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark6" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -598,8 +592,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark7" class="carousel carousel-dark slide  rounded-3 "
-          data-bs-ride="carousel">
+        <div id="carouselExampleDark7" class="carousel carousel-dark slide  rounded-3 " data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark7" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -666,8 +659,7 @@
       </div>
 
       <div class="col-md-12 py-3">
-        <div id="carouselExampleDark8" class="carousel carousel-dark slide  rounded-3 "
-          data-bs-ride="carousel">
+        <div id="carouselExampleDark8" class="carousel carousel-dark slide rounded-3 " data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -687,6 +679,23 @@
               aria-label="Slide 8"></button>
             <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="8"
               aria-label="Slide 9"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="9"
+              aria-label="Slide 10"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="10"
+              aria-label="Slide 11"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="11"
+              aria-label="Slide 12"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="12"
+              aria-label="Slide 13"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="13"
+              aria-label="Slide 14"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="14"
+              aria-label="Slide 15"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="15"
+              aria-label="Slide 16"></button>
+            <button type="button" data-bs-target="#carouselExampleDark8" data-bs-slide-to="16"
+              aria-label="Slide 17"></button>
+
           </div>
 
           <div class="carousel-inner">
@@ -716,6 +725,30 @@
             </div>
             <div class="carousel-item">
               <img src="images/Acc/Screenshot9.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot10.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot11.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot12.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot13.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot14.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot15.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot16.png" class="d-block w-100 rounded-3" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Acc/Screenshot17.png" class="d-block w-100 rounded-3" alt="...">
             </div>
 
           </div>
